# AI_FinalProject

./: Dockerfile  modal_deploy.py  modal_generation_api.py  modal_mcq_api.py  modal_summarization_api.py  patch_chunking.py  patch_mindmap.py  patch_modal.py  patch_nlp.py  pyproject.toml  test_mcq_api.py  test_regex.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  Rail.jsx  api.js  index.css
frontend/src/components/: ChapterSelect.jsx
frontend/src/pages/: AnswerPage.jsx  ChatPage.jsx  ExamPage.jsx  GradingPage.jsx  MindMapPage.jsx  SearchPage.jsx  SummaryPage.jsx
frontend/src/utils/: exportPdf.js
src/: main.py
src/controllers/: ExamGradingController.py  NLPController.py
src/frontend/: app.py
src/helpers/: config.py
src/routes/: grading.py  nlp.py  session.py
src/routes/schemes/: nlp.py
src/stores/llm/templates/locales/ar/: rag.py
src/stores/llm/templates/locales/en/: rag.py
uniact-presentation/: index.html  package-lock.json  package.json
uniact-presentation/src/: App.jsx  index.css
uniact-presentation/src/Presentation/: PresentationContainer.jsx  styles.css
uniact-presentation/src/Presentation/components/: CodeWalkthroughPlayer.jsx  Slide.jsx  VisualizerFactory.jsx
uniact-presentation/src/Presentation/data/: blueprint.json  metrics.json
uniact-presentation/src/Presentation/scenes/: BackgroundParticles.jsx
